<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmailDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="attachment">Attachment</string>

</resources>
